fixed issue with border on Safari

--- a/src/scss/base/_buttons.scss
+++ b/src/scss/base/_buttons.scss
@@ -31,7 +31,10 @@
   &::after {
     content: "";
     position: absolute;
-    inset: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     padding: 3px;
     opacity: 0;
     border-radius: inherit;
