--- a/src/scss/base/_slider.scss
+++ b/src/scss/base/_slider.scss
@@ -18,7 +18,10 @@
     &::after {
       content: "";
       position: absolute;
-      inset: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
       border-radius: inherit;
       opacity: 0;
       background: linear-gradient(97.86deg, $light-blue -38.38%, $blue 71.88%);
