--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -77,7 +77,10 @@
       &:nth-child(2) {
         position: absolute;
         z-index: -1;
-        inset: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
         width: 100%;
         height: 100%;
         transform: rotate(10deg);
@@ -86,7 +89,10 @@
       &:nth-child(3) {
         position: absolute;
         z-index: -2;
-        inset: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
         width: 100%;
         height: 100%;
         transform: rotate(20deg);
@@ -112,6 +118,7 @@
   }
 
   .hero__logos {
+    position: relative;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -125,7 +132,10 @@
     &::after {
       content: "";
       position: absolute;
-      inset: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
       padding: 1.5px;
       border-radius: inherit;
       background-image: linear-gradient(93.17deg, transparent 0.92%, $white 100%),
